Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -100,24 +100,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "friends = {'name': 'Friends', 'genre': 'sitcom', 'no_of_seasons': 10}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We create a dictionary with the braces, also called curly braces.  (On your keyboard, braces are located above the return key).  A dictionary is a group of key and value pairs, with the key to the left and the corresponding value to the right.      \n",
-    "\n",
-    "Now that we have initialized a dictionary and assigned it to the variable, `friends`, we can retrieve the dictionary by referencing our variable."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -133,7 +115,18 @@
     }
    ],
    "source": [
+    "friends = {'name': 'Friends', 'genre': 'sitcom', 'no_of_seasons': 10}\n",
+    "friends = {'name': 'Friends', 'genre': 'sitcom', 'no_of_seasons':10}\n",
     "friends"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create a dictionary with the braces, also called curly braces.  (On your keyboard, braces are located above the return key).  A dictionary is a group of key and value pairs, with the key to the left and the corresponding value to the right.      \n",
+    "\n",
+    "Now that we have initialized a dictionary and assigned it to the variable, `friends`, we can retrieve the dictionary by referencing our variable."
    ]
   },
   {
@@ -144,7 +137,7 @@
     {
      "data": {
       "text/plain": [
-       "10"
+       "{'name': 'Friends', 'genre': 'sitcom', 'no_of_seasons': 10}"
       ]
      },
      "execution_count": 3,
@@ -153,6 +146,29 @@
     }
    ],
    "source": [
+    "friends\n",
+    "friends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "friends['no_of_seasons']\n",
+    "friends['no_of_seasons']\n",
     "friends['no_of_seasons']"
    ]
   },
@@ -532,27 +548,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'name': 'Friends',\n",
-       "  'genre': 'sitcom',\n",
-       "  'no_of_seasons': 10,\n",
-       "  'no_of_episodes': 236,\n",
-       "  'creators': ['David Crane', 'Marta Kauffman']},\n",
-       " {'name': 'Seinfeld',\n",
-       "  'creators': ['Larry David', 'Jerry Seinfeld'],\n",
-       "  'genre': 'sitcom',\n",
-       "  'no_of_seasons': 10,\n",
-       "  'no_of_episodes': 180}]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'friends' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-a1edc9fc7acc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtv_shows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mfriends\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseinfeld\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtv_shows\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'friends' is not defined"
+     ]
     }
    ],
    "source": [
@@ -721,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
